[gd_scene load_steps=9 format=3 uid="uid://1rvo4q2w1kdr"]

[ext_resource type="Script" path="res://scripts/ui/PauseUI.gd" id="1_afu2v"]
[ext_resource type="Texture2D" uid="uid://ckmka8s08c8la" path="res://assets/background/PauseMenuBG.png" id="1_nmmus"]
[ext_resource type="Texture2D" uid="uid://c1vvjliprhv3e" path="res://assets/ui/panels/menu_title_panel1.png" id="2_6cenj"]
[ext_resource type="Theme" uid="uid://8ljahhyhocjx" path="res://assets/themes/UI.tres" id="2_frv6t"]
[ext_resource type="FontFile" uid="uid://dn8jthylka01q" path="res://assets/fonts/AtlantisHeadline-Bold.ttf" id="3_v4ti2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfqyy"]
bg_color = Color(0, 0, 0, 0.627451)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8u233"]
texture = ExtResource("2_6cenj")
texture_margin_left = 60.0
texture_margin_top = 60.0
texture_margin_right = 60.0
texture_margin_bottom = 60.0
region_rect = Rect2(0, 0, 720, 720)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_66ebs"]
texture = ExtResource("1_nmmus")
texture_margin_left = 58.0
texture_margin_top = 58.0149
texture_margin_right = 58.0
texture_margin_bottom = 58.0

[node name="PauseUI" type="CanvasLayer"]
script = ExtResource("1_afu2v")

[node name="DarkenPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wfqyy")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 125
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 125

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72

[node name="PageTitlePanel" type="Panel" parent="MarginContainer/VBoxContainer/TitleMargin"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8u233")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TitleMargin/PageTitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TitleMargin/PageTitlePanel/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.819608, 0.666667, 0.223529, 1)
theme_override_colors/font_shadow_color = Color(0.521569, 0.309804, 0.0705882, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_v4ti2")
theme_override_font_sizes/font_size = 36
text = "Game  Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_66ebs")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SettingsBtn" type="Button" parent="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_frv6t")
text = "Settings"

[node name="MainMenuBtn" type="Button" parent="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_frv6t")
text = "Return  to  Main  Menu"

[node name="QuitGameBtn" type="Button" parent="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_frv6t")
text = "Quit  Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsPanel/MarginContainer/VBoxContainer/QuitGameBtn" to="." method="_on_quit_game_btn_pressed"]
